--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="die">
+      <div class="dice_combo">
+        <div class="dice" id="dice_1"></div>
+        <button class="keep" id="keep_1">Keep</button>
+      </div>
+      <div class="dice_combo">
+        <div class="dice" id="dice_2"></div>
+        <button class="keep" id="keep_2">Keep</button>
+      </div>
+      <div class="dice_combo">
+        <div class="dice" id="dice_3"></div>
+        <button class="keep" id="keep_3">Keep</button>
+      </div>
+      <div class="dice_combo">
+        <div class="dice" id="dice_4"></div>
+        <button class="keep" id="keep_4">Keep</button>
+      </div>
+      <div class="dice_combo">
+        <div class="dice" id="dice_5"></div>
+        <button class="keep" id="keep_5">Keep</button>
+      </div>
+      <div class="dice_combo">
+        <div class="dice" id="dice_6"></div>
+        <button class="keep" id="keep_6">Keep</button>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
