--- a/index.html
+++ b/index.html
@@ -7,32 +7,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Yahtzee</h1>
     <div class="die">
       <div class="dice_combo">
-        <div class="dice" id="dice_1"></div>
+        <img class="dice" id="dice_1" src="dice/dice-1.png" alt="Dice-1"></img>
         <button class="keep" id="keep_1">Keep</button>
       </div>
       <div class="dice_combo">
-        <div class="dice" id="dice_2"></div>
+        <img class="dice" id="dice_2" src="dice/dice-1.png" alt="Dice-2"></img>
         <button class="keep" id="keep_2">Keep</button>
       </div>
       <div class="dice_combo">
-        <div class="dice" id="dice_3"></div>
+        <img class="dice" id="dice_3" src="dice/dice-1.png" alt="Dice-3"></img>
         <button class="keep" id="keep_3">Keep</button>
       </div>
       <div class="dice_combo">
-        <div class="dice" id="dice_4"></div>
+        <img class="dice" id="dice_4" src="dice/dice-1.png" alt="Dice-4"></img>
         <button class="keep" id="keep_4">Keep</button>
       </div>
       <div class="dice_combo">
-        <div class="dice" id="dice_5"></div>
+        <img class="dice" id="dice_5" src="dice/dice-1.png" alt="Dice-5"></img>
         <button class="keep" id="keep_5">Keep</button>
       </div>
-      <div class="dice_combo">
-        <div class="dice" id="dice_6"></div>
-        <button class="keep" id="keep_6">Keep</button>
-      </div>
     </div>
+    <button class="roll_btn">Roll</button>
     <script src="app.js"></script>
   </body>
 </html>
