--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       </div>
     </div>
     <button class="roll_btn">Roll</button>
+
+    <div class="player_scorecards">
+<div>Player 1 Scorecard</div>
+<div>Player 2 Scorecard</div>
+</div>
+<div class="upper_sections">
+<div class="upper_section_1"></div>
+<div class="upper_section_2"></div>
+</div>
+<div class="lower_sections">
+<div class="lower_section_1"></div>
+<div class="lower_section_2"></div>
+</div>
+
+
     <script src="app.js"></script>
   </body>
 </html>
