--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
     <button class="roll_btn">Roll</button>
     <div class="turn_over hidden">Turn Over</div>
   </div>
-
-    <div class="player_scorecards">
-<div>Player 1 Scorecard</div>
-<div>Player 2 Scorecard</div>
-</div>
-<div class="upper_sections">
-<div class="upper_section_1"></div>
-<div class="upper_section_2"></div>
-</div>
-<div class="lower_sections">
-<div class="lower_section_1"></div>
-<div class="lower_section_2"></div>
-</div>
-
-
+  <div class="player_scorecards">
+    <div>Player 1 Scorecard</div>
+    <div>Player 2 Scorecard</div>
+  </div>
+  <div class="upper_sections">
+    <div class="upper_section_1"></div>
+    <div class="upper_btns"></div>
+    <div class="upper_section_2"></div>
+  </div>
+  <div class="lower_sections">
+    <div class="lower_section_1"></div>
+    <div class="lower_btns"></div>
+    <div class="lower_section_2"></div>
+  </div>
     <script src="app.js"></script>
   </body>
 </html>
