added zero button option

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <div class="lower_sections">
     <div class="lower_section_1"></div>
     <div class="lower_btns"></div>
+    <div class="zero_btns"></div>
     <div class="lower_section_2"></div>
   </div>
     <script src="app.js"></script>
