--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="gameboard">
     <h1>Yahtzee</h1>
     <div class="die">
       <div class="dice_combo">
@@ -50,6 +51,7 @@
     <div class="zero_btns"></div>
     <div class="lower_section_2"></div>
   </div>
+</div>
     <script src="app.js"></script>
   </body>
 </html>
