--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="zero_btns"></div>
     <div class="lower_section_2"></div>
   </div>
+  <button class="reset_btn">Reset Game</button>
 </div>
     <script src="app.js"></script>
   </body>
