--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
         <button class="keep" id="keep_5">Keep</button>
       </div>
     </div>
-    <div class="turn_roll">
-    <div class="turn">Player 1's Turn:</div>
     <button class="roll_btn">Roll</button>
-    <div class="turn_over hidden">Turn Over</div>
-  </div>
+    <div class="turn">Player 1's Turn</div>
+    <div class="turn_over">Roll</div>
   <div class="player_scorecards">
     <div>Player 1 Scorecard</div>
     <div>Player 2 Scorecard</div>
