fixed up the css

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     <div>Player 1 Scorecard</div>
     <div>Player 2 Scorecard</div>
   </div>
+  <div class="middle_section">
   <div class="upper_sections">
     <div class="upper_section_1"></div>
     <div class="upper_btns"></div>
     <div class="upper_section_2"></div>
   </div>
+</div>
+<div class="bottom_section">
   <div class="lower_sections">
     <div class="lower_section_1"></div>
     <div class="lower_btns"></div>
@@ -50,6 +53,7 @@
     <div class="lower_section_2"></div>
   </div>
   <button class="reset_btn">Reset Game</button>
+</div>
 </div>
     <script src="app.js"></script>
   </body>
